# dermaface-ai

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci.yml
data/: README.md  raw-data-sources.md
docs/: PROVENANCE.md  data-strategy.md  ethics-and-disclaimer.md  model-card.md  project-plan.md  report-draft.md  report-guide.md  requirements.md  severity-decision.md  team-roles.md
docs/project progress report/: day-1-project-setup-report.docx
docs/standups/: 2026-07-13-standup1.md  2026-07-15-standup2.md  2026-07-17-standup3.md  2026-07-20-sprint2-standup1.md  README.md
notebooks/: 00_data_ingestion.ipynb  01_eda.ipynb  README.md
scripts/: make_smoke_slice.py  preview_augmentation.py  pull_fitzpatrick_images.py  verify_slice.py
src/dermaface/: __init__.py  config.py  inference.py
src/dermaface/app/: __init__.py  overlay.py  streamlit_app.py
src/dermaface/data/: __init__.py  clean.py  dataset.py  download.py  facecheck.py  fairness.py  manifest.py  preprocessing.py  qa.py  splits.py  weights.py
src/dermaface/explain/: __init__.py  gradcam.py
src/dermaface/models/: __init__.py  classifier.py
src/dermaface/training/: __init__.py  evaluate.py  metrics.py  train.py
tests/: test_data_pipeline.py  test_metrics.py  test_smoke.py
